#menubar modified. White text menu disappearing over background and odd wrapping - temporary fix. (And Ed playing)

--- a/static/style/andoverarchers.css
+++ b/static/style/andoverarchers.css
@@ -112,10 +112,16 @@ font-weight: normal;
 /* Menu bar formatting */
 #menubar
 {
-position: absolute;
+/*position: absolute;
 text-align: center;
 top: 155px;
-left: 553px;
+left: 553px;*/
+
+position: relative;
+text-align: center;
+top: 155px;
+left: 53px;
+white-space: nowrap;
 }
 
 #menubar ul
